Algumas classes foram re-organizadas